--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "npm run build_node && npm run build_web",
 
     "test_web": "npm run build && node test-site/server.mjs",
-    "test_node": "npm run build && node test.mjs"
+    "test_node": "npm run build_node && node test.mjs"
   },
   "repository": {
     "type": "git",
