--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "build_web": "rimraf ./html && tsc --target ES5 --module ES6 --outdir ./html src/ws/client/browser/ClientBrowser.ts && npm run webpack",
     "build_node": "rimraf ./dist && tsc -d",
     "build": "npm run build_node && npm run build_web",
-
+    
     "test_web": "npm run build && node test-site/server.mjs",
     "test_node": "npm run build_node && node test.mjs",
-
-    "publish": "npm run build && copy ./bundled/SonicWS_bundle.js ./bundled/SonicWS_bundle_release.js && npm publish"
+    
+    "publish": "npm run build && cpy bundled/SonicWS_bundle.js bundled/SonicWS_bundle_release.js --rename=SonicWS_bundle_release.js && npm publish"
   },
   "repository": {
     "type": "git",
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@types/node": "^22.15.17",
     "@types/ws": "^8.18.1",
+    "cpy-cli": "^5.0.0",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.3",
     "undici": "^7.8.0",
