--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sonic-ws",
-  "version": "1.0.0-rc.5",
+  "version": "1.0.0-rc.5-verfix",
   "description": "A bandwidth efficient websocket library",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
