--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
-      "moduleResolution": "node",          
+      "moduleResolution": "nodenext",
+      "module": "nodenext",  
       "strict": true,                           
       "esModuleInterop": true,                  
       "skipLibCheck": true,                     
@@ -8,7 +9,8 @@
       "outDir": "./dist/",                       
       "declaration": true,
       "rootDir": "./src/",
-      "lib":["es2015","dom"]   
+      "target": "es2024",
+      "lib":["ES2024","dom"]   
     },
     "include": ["./src/**/*"],
     "exclude": ["node_modules"]
